--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:elevation="4dp"
+        app:elevation="@dimen/small"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="@string/label_settings"
         app:titleTextColor="@color/colorTextToolbar" />
@@ -30,7 +30,7 @@
         <View
             android:id="@+id/toolbar_shadow_settings"
             android:layout_width="match_parent"
-            android:layout_height="6dp"
+            android:layout_height="@dimen/normal"
             android:background="@drawable/toolbar_shadow" />
 
     </FrameLayout>
