--- a/app/src/main/res/layout/dialog_reset_password_layout.xml
+++ b/app/src/main/res/layout/dialog_reset_password_layout.xml
@@ -10,18 +10,15 @@
         android:scaleType="center"
         android:text="@string/label_reset_password"
         android:textColor="@android:color/black"
-        android:layout_marginTop="12dp"
-        android:layout_marginLeft="12dp"
-        android:textSize="16sp" />
+        android:layout_marginTop="@dimen/margin_12"
+        android:layout_marginLeft="@dimen/margin_12"
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <EditText
         android:id="@+id/res_password_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="12dp"
+        android:layout_margin="@dimen/margin_12"
         android:hint="@string/hint_email"
         android:inputType="textEmailAddress" />
 </LinearLayout>
