--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:elevation="4dp"
+        app:elevation="@dimen/small"
         app:title="@string/label_details"
         app:titleTextColor="@color/colorTextToolbar" />
 
@@ -47,12 +47,12 @@
         <View
             android:id="@+id/toolbar_shadow_details"
             android:layout_width="match_parent"
-            android:layout_height="6dp"
+            android:layout_height="@dimen/normal"
             android:background="@drawable/toolbar_shadow" />
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="4dp"
+            android:layout_height="@dimen/small"
             android:layout_gravity="bottom"
             android:background="@drawable/shadow_comment" />
 
@@ -71,19 +71,19 @@
             app:layout_widthPercent="85%"
             android:background="@android:color/transparent"
             android:hint="@string/hint_enter_comment"
-            android:paddingBottom="12dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="12dp" />
+            android:paddingBottom="@dimen/padding_12"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/padding_12" />
 
         <ImageView
             android:id="@+id/details_btn_add_comment"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
+            android:layout_width="@dimen/image_add_comment"
+            android:layout_height="@dimen/image_add_comment"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="12dp"
+            android:layout_marginLeft="@dimen/padding_12"
+            android:layout_marginRight="@dimen/padding_12"
             android:src="@drawable/icon_send" />
 
     </android.support.percent.PercentRelativeLayout>
