--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -15,51 +15,51 @@
 
     <ImageView
         android:id="@+id/edit_profile_iv_avatar"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_width="@dimen/profile_edit_image_height"
+        android:layout_height="@dimen/profile_edit_image_height"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin" />
 
     <EditText
         android:id="@+id/edit_profile_et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:inputType="text"
-        android:textSize="16sp" />
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:text="@string/label_change_password"
         android:textColor="@color/colorTextLink"
-        android:textSize="16sp" />
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <EditText
         android:id="@+id/edit_profile_et_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/margin_12"
         android:hint="@string/hint_new_password"
         android:inputType="textPassword"
-        android:textSize="16sp" />
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <EditText
         android:id="@+id/edit_profile_et_repeat_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:hint="@string/hint_repeat_new_password"
         android:inputType="textPassword"
-        android:textSize="16sp" />
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <Button
         android:id="@+id/edit_profile_btn_change_password"
