--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
-        app:elevation="4dp"
+        app:elevation="@dimen/small"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:title="@string/label_help"
         app:titleTextColor="@color/colorTextToolbar" />
@@ -29,7 +29,7 @@
         <View
             android:id="@+id/toolbar_shadow_help"
             android:layout_width="match_parent"
-            android:layout_height="6dp"
+            android:layout_height="@dimen/normal"
             android:background="@drawable/toolbar_shadow" />
 
     </FrameLayout>
