--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -27,24 +27,24 @@
                 android:id="@+id/tv_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="@dimen/margin_20"
                 android:text="@string/app_name"
                 android:textAllCaps="false"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/text_size_normal" />
 
             <FrameLayout
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_width="@dimen/image_size"
+                android:layout_height="@dimen/image_size"
                 android:layout_gravity="center"
-                android:layout_marginTop="18dp">
+                android:layout_marginTop="@dimen/margin_18">
 
                 <ImageView
                     android:id="@+id/iv_sign_up_photo"
-                    android:layout_width="70dp"
-                    android:layout_height="70dp"
+                    android:layout_width="@dimen/small_image_sign_up"
+                    android:layout_height="@dimen/small_image_sign_up"
                     android:layout_gravity="center_horizontal|top"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                     android:src="@drawable/icon_camera_big_selector" />
 
                 <ImageView
@@ -52,7 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal|top"
-                    android:layout_margin="5dp"
+                    android:layout_margin="@dimen/margin_6"
                     android:visibility="gone" />
 
                 <TextView
@@ -60,9 +60,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="15dp"
+                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:text="@string/label_photo"
-                    android:textColor="#aeaeae" />
+                    android:textColor="@color/colorSignUpText" />
 
                 <ImageView
                     android:layout_width="match_parent"
@@ -74,10 +74,10 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="12dp"
-                android:textColorHint="#BDBDBD">
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/margin_12"
+                android:textColorHint="@color/colorHint">
 
                 <EditText
                     android:id="@+id/et_sign_up_full_name"
@@ -86,23 +86,23 @@
                     android:background="@drawable/sign_up_et_selector"
                     android:hint="@string/hint_full_name"
                     android:inputType="textPersonName"
-                    android:paddingBottom="16dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/margin_10"
+                    android:paddingTop="@dimen/margin_10"
                     android:textColor="#FFFFFF"
-                    android:textColorHint="#BDBDBD"
+                    android:textColorHint="@color/colorHint"
                     android:textCursorDrawable="@null"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_pre_normal" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:textColorHint="#BDBDBD">
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/margin_10"
+                android:textColorHint="@color/colorHint">
 
                 <EditText
                     android:id="@+id/et_sign_up_email"
@@ -111,23 +111,23 @@
                     android:background="@drawable/sign_up_et_selector"
                     android:hint="@string/hint_email"
                     android:inputType="textEmailAddress"
-                    android:paddingBottom="16dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="12dp"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#BDBDBD"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/margin_10"
+                    android:paddingTop="@dimen/padding_12"
+                    android:textColor="@android:color/white"
+                    android:textColorHint="@color/colorHint"
                     android:textCursorDrawable="@null"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_pre_normal" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="10dp"
-                android:textColorHint="#BDBDBD">
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/margin_10"
+                android:textColorHint="@color/colorHint">
 
                 <EditText
                     android:id="@+id/et_sign_up_password"
@@ -136,23 +136,23 @@
                     android:background="@drawable/sign_up_et_selector"
                     android:hint="@string/hint_password"
                     android:inputType="textPassword"
-                    android:paddingBottom="16dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#BDBDBD"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/margin_10"
+                    android:paddingTop="@dimen/margin_10"
+                    android:textColor="@android:color/white"
+                    android:textColorHint="@color/colorHint"
                     android:textCursorDrawable="@null"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_pre_normal" />
 
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="12dp"
-                android:textColorHint="#BDBDBD">
+                android:layout_marginLeft="@dimen/activity_vertical_margin"
+                android:layout_marginRight="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/margin_12"
+                android:textColorHint="@color/colorHint">
 
                 <EditText
                     android:id="@+id/et_sign_up_repeat_password"
@@ -161,13 +161,13 @@
                     android:background="@drawable/sign_up_et_selector"
                     android:hint="@string/hint_repeat_password"
                     android:inputType="textPassword"
-                    android:paddingBottom="16dp"
-                    android:paddingLeft="10dp"
-                    android:paddingTop="10dp"
-                    android:textColor="#FFFFFF"
-                    android:textColorHint="#BDBDBD"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingLeft="@dimen/margin_10"
+                    android:paddingTop="@dimen/margin_10"
+                    android:textColor="@android:color/white"
+                    android:textColorHint="@color/colorHint"
                     android:textCursorDrawable="@null"
-                    android:textSize="16sp" />
+                    android:textSize="@dimen/text_size_pre_normal" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -176,7 +176,7 @@
                 style="@style/AppTheme.Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="@dimen/margin_24"
                 android:background="@drawable/button_sign_selector"
                 android:text="@string/btn_label_sign_up" />
 
@@ -185,11 +185,11 @@
                 style="?borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="@dimen/margin_10"
                 android:text="@string/label_already_have_an_account"
                 android:textAllCaps="false"
-                android:textColor="#03A9F4"
-                android:textSize="16sp" />
+                android:textColor="@color/colorSignUpTextView"
+                android:textSize="@dimen/text_size_pre_normal" />
 
         </LinearLayout>
 
