--- a/app/src/main/res/layout/details_header_layout.xml
+++ b/app/src/main/res/layout/details_header_layout.xml
@@ -9,9 +9,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:id="@+id/details_ll_author"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical"
-                android:paddingLeft="8dp">
+                android:paddingLeft="@dimen/padding_8">
 
                 <TextView
                     android:id="@+id/details_tv_author"
@@ -51,8 +51,7 @@
                     android:lines="1"
                     android:maxLength="24"
                     android:textColor="@color/colorTextSecondary"
-                    android:textSize="@dimen/medium_text_size"
-                    tools:text="17th May" />
+                    android:textSize="@dimen/medium_text_size"/>
 
             </LinearLayout>
 
@@ -73,7 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@id/details_tv_status"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/margin_6"
             android:visibility="gone" />
 
     </RelativeLayout>
@@ -83,30 +82,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="@dimen/margin_18"
         android:textColor="@android:color/black"
-        android:textSize="@dimen/medium_text_size"
-        tools:text="Where is better pizza?" />
+        android:textSize="@dimen/medium_text_size" />
 
     <LinearLayout
         android:id="@+id/ll_variants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="@dimen/margin_6"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="@dimen/margin_12"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/details_iv_first_image"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:padding="8dp"
+                android:layout_width="@dimen/up_small_image_size"
+                android:layout_height="@dimen/up_small_image_size"
+                android:padding="@dimen/padding_8"
                 android:src="@drawable/standard_photo" />
 
             <TextView
@@ -116,37 +114,35 @@
                 android:layout_gravity="center"
                 android:drawablePadding="2dp"
                 android:gravity="center"
-                android:paddingTop="4dp"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                tools:text="Chas poistu" />
+                android:paddingTop="@dimen/padding_4"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_pre_normal" />
 
             <CheckBox
                 android:id="@+id/details_ch_like_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/padding_4"
                 android:button="@drawable/icon_like_black_selector"
                 android:gravity="center"
-                android:paddingLeft="4dp"
+                android:paddingLeft="@dimen/padding_4"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="@dimen/medium_text_size"
-                tools:text="14" />
+                android:textSize="@dimen/medium_text_size" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="@dimen/margin_12"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/details_iv_second_image"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:padding="8dp"
+                android:layout_width="@dimen/up_small_image_size"
+                android:layout_height="@dimen/up_small_image_size"
+                android:padding="@dimen/padding_8"
                 android:src="@drawable/standard_photo" />
 
             <TextView
@@ -156,23 +152,21 @@
                 android:layout_gravity="center"
                 android:drawablePadding="2dp"
                 android:gravity="center"
-                android:paddingTop="4dp"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                tools:text="Felichita" />
+                android:paddingTop="@dimen/padding_4"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_pre_normal" />
 
             <CheckBox
                 android:id="@+id/details_ch_like_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/padding_4"
                 android:button="@drawable/icon_like_black_selector"
                 android:gravity="center"
-                android:paddingLeft="4dp"
+                android:paddingLeft="@dimen/padding_4"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="@dimen/medium_text_size"
-                tools:text="14" />
+                android:textSize="@dimen/medium_text_size"/>
 
         </LinearLayout>
 
@@ -181,29 +175,27 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/details_tv_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextSecondary"
-            android:textSize="@dimen/medium_text_size"
-            tools:text="Entertainment" />
+            android:textSize="@dimen/medium_text_size" />
 
         <TextView
             android:id="@+id/details_tv_comments_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:drawablePadding="6dp"
+            android:drawablePadding="@dimen/margin_6"
             android:drawableRight="@drawable/icon_comments"
             android:gravity="center"
             android:textColor="@color/colorTextSecondary"
-            android:textSize="@dimen/medium_text_size"
-            tools:text="12" />
+            android:textSize="@dimen/medium_text_size" />
 
     </RelativeLayout>
 
