--- a/app/src/main/res/layout/fragment_add_compare.xml
+++ b/app/src/main/res/layout/fragment_add_compare.xml
@@ -21,17 +21,18 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="12dp"
-                android:textColorHint="#BDBDBD"
+                android:layout_marginLeft="@dimen/padding_8"
+                android:layout_marginRight="@dimen/padding_8"
+                android:layout_marginTop="@dimen/margin_12"
+                android:textColorHint="@color/colorHint"
                 android:textSize="@dimen/medium_text_size">
 
                 <EditText
                     android:id="@+id/add_compare_et_question"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/hint_question" />
+                    android:hint="@string/hint_question"
+                    android:maxLength="40" />
 
             </android.support.design.widget.TextInputLayout>
 
@@ -40,15 +41,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="@dimen/margin_18"
                 android:text="@string/hint_variants"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="18sp" />
+                android:textSize="@dimen/text_size_normal" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="@dimen/margin_12"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -59,25 +60,26 @@
 
                     <ImageView
                         android:id="@+id/add_compare_first_img"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="@dimen/image_size"
+                        android:layout_height="@dimen/image_size"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/standard_photo" />
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="10dp"
-                        android:textColorHint="#BDBDBD"
+                        android:layout_marginLeft="@dimen/padding_8"
+                        android:layout_marginRight="@dimen/padding_8"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:textColorHint="@color/colorHint"
                         android:textSize="@dimen/medium_text_size">
 
                         <EditText
                             android:id="@+id/add_compare_et_first_variant"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_description" />
+                            android:hint="@string/hint_description"
+                            android:maxLength="40" />
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -91,25 +93,26 @@
 
                     <ImageView
                         android:id="@+id/add_compare_second_img"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="@dimen/image_size"
+                        android:layout_height="@dimen/image_size"
                         android:layout_gravity="center_horizontal"
                         android:src="@drawable/standard_photo" />
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_marginTop="10dp"
-                        android:textColorHint="#BDBDBD"
+                        android:layout_marginLeft="@dimen/padding_8"
+                        android:layout_marginRight="@dimen/padding_8"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:textColorHint="@color/colorHint"
                         android:textSize="@dimen/medium_text_size">
 
                         <EditText
                             android:id="@+id/add_compare_et_second_variant"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/hint_description" />
+                            android:hint="@string/hint_description"
+                            android:maxLength="40" />
 
                     </android.support.design.widget.TextInputLayout>
 
@@ -122,9 +125,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="14dp"
+                android:layout_marginTop="@dimen/margin_12"
                 android:entries="@array/categories"
-                android:minWidth="20dp"
+                android:minWidth="@dimen/spinner_min_width"
                 android:spinnerMode="dialog" />
 
         </LinearLayout>
