--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -18,11 +18,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="@dimen/activity_horizontal_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:button="@drawable/icon_like_white_selector"
-        android:paddingLeft="6dp"
+        android:paddingLeft="@dimen/margin_6"
         android:textColor="@android:color/white"
-        android:textSize="16sp" />
+        android:textSize="@dimen/text_size_pre_normal" />
 
 </RelativeLayout>
