--- a/app/src/main/res/layout/fragment_preview_compare.xml
+++ b/app/src/main/res/layout/fragment_preview_compare.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="16dp"
+    android:layout_marginBottom="@dimen/activity_horizontal_margin"
     android:contextClickable="false"
     android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp">
+        android:layout_marginLeft="@dimen/activity_vertical_margin"
+        android:layout_marginRight="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:id="@+id/preview_ll_author"
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:orientation="vertical"
-                android:paddingLeft="8dp">
+                android:paddingLeft="@dimen/padding_8">
 
                 <TextView
                     android:id="@+id/preview_tv_author"
@@ -41,8 +41,7 @@
                     android:maxEms="10"
                     android:maxLines="1"
                     android:textColor="@color/colorTextLink"
-                    android:textSize="@dimen/medium_text_size"
-                    tools:text="Александр Мариновский" />
+                    android:textSize="@dimen/medium_text_size" />
 
                 <TextView
                     android:id="@+id/preview_tv_date"
@@ -51,8 +50,7 @@
                     android:lines="1"
                     android:maxLength="24"
                     android:textColor="@color/colorTextSecondary"
-                    android:textSize="@dimen/medium_text_size"
-                    tools:text="17th May" />
+                    android:textSize="@dimen/medium_text_size" />
 
             </LinearLayout>
 
@@ -74,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="@dimen/margin_18"
         android:textColor="@android:color/black"
         android:textSize="@dimen/medium_text_size"
         tools:text="Where is better pizza?" />
@@ -83,21 +81,21 @@
         android:id="@+id/preview_ll_variants"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="@dimen/margin_6"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="12dp"
+            android:layout_marginRight="@dimen/margin_12"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/preview_iv_first_image"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:padding="8dp"
+                android:layout_width="@dimen/up_small_image_size"
+                android:layout_height="@dimen/up_small_image_size"
+                android:padding="@dimen/padding_8"
                 android:src="@drawable/standard_photo" />
 
             <TextView
@@ -107,37 +105,35 @@
                 android:layout_gravity="center"
                 android:drawablePadding="2dp"
                 android:gravity="center"
-                android:paddingTop="4dp"
-                tools:text="Chas poistu"
-                android:textColor="#000000"
-                android:textSize="16sp" />
+                android:paddingTop="@dimen/padding_4"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_pre_normal" />
 
             <CheckBox
                 android:id="@+id/preview_ch_like_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/padding_4"
                 android:button="@drawable/icon_like_black_selector"
                 android:gravity="center"
-                tools:paddingLeft="4dp"
+                tools:paddingLeft="@dimen/padding_4"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="@dimen/medium_text_size"
-                tools:text="14" />
+                android:textSize="@dimen/medium_text_size" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginLeft="@dimen/margin_12"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/preview_iv_second_image"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:padding="8dp"
+                android:layout_width="@dimen/up_small_image_size"
+                android:layout_height="@dimen/up_small_image_size"
+                android:padding="@dimen/padding_8"
                 android:src="@drawable/standard_photo" />
 
             <TextView
@@ -145,25 +141,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:drawablePadding="2dp"
+                android:drawablePadding="@dimen/padding_2"
                 android:gravity="center"
-                android:paddingTop="4dp"
-                tools:text="Felichita"
-                android:textColor="#000000"
-                android:textSize="16sp" />
+                android:paddingTop="@dimen/padding_4"
+                android:textColor="@android:color/black"
+                android:textSize="@dimen/text_size_pre_normal" />
 
             <CheckBox
                 android:id="@+id/preview_ch_like_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="@dimen/padding_4"
                 android:button="@drawable/icon_like_black_selector"
                 android:gravity="center"
-                android:paddingLeft="4dp"
+                android:paddingLeft="@dimen/padding_4"
                 android:textColor="@color/colorTextPrimary"
-                android:textSize="@dimen/medium_text_size"
-                tools:text="14" />
+                android:textSize="@dimen/medium_text_size" />
 
         </LinearLayout>
 
@@ -173,8 +167,8 @@
         android:id="@+id/preview_tv_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="@dimen/activity_horizontal_margin"
         android:textColor="@color/colorTextSecondary"
         android:textSize="@dimen/medium_text_size"
         tools:text="Entertainment" />
