--- a/app/src/main/res/layout/profile_item_layout.xml
+++ b/app/src/main/res/layout/profile_item_layout.xml
@@ -5,24 +5,23 @@
     android:layout_height="wrap_content"
     android:background="@drawable/card_foreground"
     android:orientation="horizontal"
-    android:padding="16dp">
+    android:padding="@dimen/activity_vertical_margin">
 
     <TextView
         android:id="@+id/profile_rv_tv_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/icon_people"
-        android:drawablePadding="6dp"
+        android:drawablePadding="@dimen/drawable_padding_small"
         android:gravity="center"
         android:textColor="@color/colorTextPrimary"
-        android:textSize="@dimen/medium_text_size"
-        tools:text="104" />
+        android:textSize="@dimen/medium_text_size" />
 
     <TextView
         android:id="@+id/profile_rv_tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="12dp"
+        android:paddingLeft="@dimen/padding_12"
         android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/medium_text_size"
         tools:text="Followers" />
