--- a/app/src/main/res/layout/tip_item_layout.xml
+++ b/app/src/main/res/layout/tip_item_layout.xml
@@ -2,36 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="16dp">
+    android:orientation="vertical"
+    android:padding="@dimen/activity_horizontal_margin">
+
+    <TextView
+        android:id="@+id/help_tv_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/padding_8"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/help_tv_tip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/text_size_pre_normal" />
 
     <ImageView
         android:id="@+id/help_iv_picture"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:scaleType="centerCrop" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/help_tv_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="8dp"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/help_tv_tip"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="gravity"
-            android:textSize="@dimen/text_size_pre_normal" />
-
-    </LinearLayout>
+        android:layout_width="@dimen/help_picture_size"
+        android:layout_height="@dimen/help_picture_size"
+        android:layout_gravity="center"
+        android:paddingBottom="@dimen/padding_8"
+        android:paddingTop="@dimen/padding_8"
+        android:scaleType="fitCenter" />
 </LinearLayout>
