add empty value screens

--- a/app/src/main/res/layout/activity_followers.xml
+++ b/app/src/main/res/layout/activity_followers.xml
@@ -25,11 +25,22 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <TextView
+                android:id="@+id/tv_no_followers"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="36dp"
+                android:text="@string/no_followers"
+                android:visibility="gone"
+                android:textColor="@color/colorTextSecondary"
+                android:textSize="18sp" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycler_view_followers"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scrollbars="vertical" />
+                android:scrollbars="vertical"/>
 
             <View
                 android:id="@+id/toolbar_shadow_followers"
