--- a/app/src/main/res/layout/fragment_all_compares.xml
+++ b/app/src/main/res/layout/fragment_all_compares.xml
@@ -17,6 +17,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/tv_no_compares_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="96dp"
+                    android:text="@string/no_compares"
+                    android:textColor="@color/colorTextSecondary"
+                    android:textSize="18sp"
+                    android:visibility="gone" />
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_view_all_compares"
                     android:layout_width="match_parent"
