--- a/app/src/main/res/layout/fragment_followings_compares.xml
+++ b/app/src/main/res/layout/fragment_followings_compares.xml
@@ -1,13 +1,26 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundLists"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".screens.activities.MainActivity">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_to_refresh_follwings_compares"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_no_compares_followings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:paddingTop="96dp"
+            android:text="@string/no_compares"
+            android:textColor="@color/colorTextSecondary"
+            android:textSize="18sp"
+            android:visibility="gone" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_followings_compares"
