--- a/app/src/main/res/layout/fragment_image_view.xml
+++ b/app/src/main/res/layout/fragment_image_view.xml
@@ -13,4 +13,14 @@
         android:layout_centerVertical="true"
         android:src="@drawable/test_img" />
 
+    <TextView
+        android:id="@+id/view_image_tv_none"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_image"
+        android:textColor="@color/colorTextNavHeader"
+        android:textSize="16sp"
+        android:visibility="gone" />
+
 </RelativeLayout>
